# andes-app

./: .env.example  .gitignore  .rsyncignore  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/andes_api/: app.py  main.py  storage.py
backend/src/andes_core/: __init__.py  cache.py  cli.py  config.py  engine.py  gene_mapping_service.py  gsea_trace.py  io.py  legacy.py  provenance.py  schemas.py
backend/src/andes_core/gene_mapping/: __init__.py  service.py
backend/src/andes_worker/: main.py
backend/tests/: test_api.py  test_benchmark_inputs.py  test_cache.py  test_cli.py  test_deployment_config.py  test_engine_smoke.py  test_gene_mapping_service.py  test_io.py  test_legacy.py  test_provenance.py  test_real_gene_mapping.py  test_storage.py  test_worker.py
backend/tests/fixtures/: mini_aliases.tsv  mini_embedding.csv  mini_gene_sets.gmt  mini_go.obo  mini_go_annotations.tsv
manual_uploads/: README.md  query_genes.txt  query_small.gmt  ranked_genes.txt  target_small.gmt  test_go.obo  test_go_annotations.tsv
ops/launchd/: com.andes.api.plist  com.andes.cleanup.plist  com.andes.worker.plist
ops/systemd/: andes-api.service  andes-cleanup.service  andes-cleanup.timer  andes-worker.service
scripts/: horchata-demo.sh
web/: Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: admin-password-panel.tsx  gene-set-upload-picker.tsx  preflight-preview.tsx  run-template-panel.tsx  (+1 more)
(+12 files in other folders)
